fix : Webhook으로 인한 버전 생성, 삭제오류 수정